# auto_ops

./: .travis.yml  Cargo.toml  README.md
src/: assignment_gen.rs  binary_gen.rs  lib.rs  unary_gen.rs
tests/: assignment.rs  binary.rs
